syntax = "proto3";

package authz.v1;

option go_package = "authz-go/pkg/proto/authz/v1;authzv1";

import "authz/v1/common.proto";

service TeamService {
  rpc CreateTeam(CreateTeamRequest) returns (CreateTeamResponse);
  rpc GetTeam(GetTeamRequest) returns (GetTeamResponse);
  rpc UpdateTeam(UpdateTeamRequest) returns (UpdateTeamResponse);
  rpc DeleteTeam(DeleteTeamRequest) returns (DeleteTeamResponse);
  rpc ListTeams(ListTeamsRequest) returns (ListTeamsResponse);
  rpc AddMember(AddTeamMemberRequest) returns (AddTeamMemberResponse);
  rpc RemoveMember(RemoveTeamMemberRequest) returns (RemoveTeamMemberResponse);
  rpc ListMembers(ListTeamMembersRequest) returns (ListTeamMembersResponse);
}

message TeamInfo {
  string id = 1;
  string name = 2;
  string org_id = 3;
  int32 member_count = 4;
}

message CreateTeamRequest {
  string org_id = 1;
  string name = 2;
}

message CreateTeamResponse {
  TeamInfo team = 1;
}

message GetTeamRequest {
  string team_id = 1;
}

message GetTeamResponse {
  TeamInfo team = 1;
}

message UpdateTeamRequest {
  string team_id = 1;
  optional string name = 2;
}

message UpdateTeamResponse {
  TeamInfo team = 1;
}

message DeleteTeamRequest {
  string team_id = 1;
}

message DeleteTeamResponse {}

message ListTeamsRequest {
  string org_id = 1;
  PaginationRequest pagination = 2;
}

message ListTeamsResponse {
  repeated TeamInfo teams = 1;
  PaginationResponse pagination = 2;
}

message AddTeamMemberRequest {
  string team_id = 1;
  string user_id = 2;
  string role_id = 3;
}

message AddTeamMemberResponse {}

message RemoveTeamMemberRequest {
  string team_id = 1;
  string user_id = 2;
}

message RemoveTeamMemberResponse {}

message ListTeamMembersRequest {
  string team_id = 1;
  PaginationRequest pagination = 2;
}

message ListTeamMembersResponse {
  repeated MemberInfo members = 1;
  PaginationResponse pagination = 2;
}
